split ORder into Order and OrderItem